// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Framework ESLint Integration > should lint Angular test file > angular-errors 1`] = `
[
  {
    "column": 2,
    "endColumn": 41,
    "endLine": 3,
    "line": 3,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 69,
    "endLine": 6,
    "line": 6,
    "message": "DBBadge with corner placement must have max 3 characters in text/children",
    "messageId": "textTooLong",
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 55,
    "endLine": 12,
    "line": 9,
    "message": "DBButton with noText must have an icon prop",
    "messageId": "missingIcon",
    "ruleId": "db-ux/button-no-text-requires-tooltip",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 94,
    "endLine": 10,
    "line": 10,
    "message": "DBBadge with corner placement must have max 3 characters in text/children",
    "messageId": "textTooLong",
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 55,
    "endLine": 28,
    "line": 27,
    "message": "DBButton with noText must have an icon prop",
    "messageId": "missingIcon",
    "ruleId": "db-ux/button-no-text-requires-tooltip",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 55,
    "endLine": 30,
    "line": 29,
    "message": "DBButton with noText must have an icon prop",
    "messageId": "missingIcon",
    "ruleId": "db-ux/button-no-text-requires-tooltip",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 15,
    "endLine": 56,
    "line": 53,
    "message": "DBTooltip must not contain interactive elements. Use DBPopover for interactive content",
    "messageId": "noInteractive",
    "ruleId": "db-ux/no-interactive-tooltip-content",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 15,
    "endLine": 56,
    "line": 53,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 55,
    "endLine": 55,
    "line": 54,
    "message": "DBButton with noText must have an icon prop",
    "messageId": "missingIcon",
    "ruleId": "db-ux/button-no-text-requires-tooltip",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 33,
    "endLine": 61,
    "line": 61,
    "message": "DBAccordion must not be nested inside another DBAccordion as it confuses users",
    "messageId": "noNested",
    "ruleId": "db-ux/no-nested-accordion",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 55,
    "endLine": 69,
    "line": 66,
    "message": "DBButton with noText must have an icon prop",
    "messageId": "missingIcon",
    "ruleId": "db-ux/button-no-text-requires-tooltip",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 36,
    "endLine": 67,
    "line": 67,
    "message": "Use icon attribute instead of DBIcon child in db-button",
    "messageId": "preferAttribute",
    "ruleId": "db-ux/prefer-icon-attribute",
    "severity": 1,
  },
  {
    "column": 3,
    "endColumn": 62,
    "endLine": 79,
    "line": 79,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
]
`;

exports[`Framework ESLint Integration > should lint Angular test file > angular-fixed 1`] = `
"<div>
	<!-- db-ux/accordion-item-headline-required -->
	<db-accordion-item></db-accordion-item>

	<!-- db-ux/badge-corner-placement-rules -->
	<db-badge placement="corner-top-right" label="9999">9999</db-badge>

	<!-- db-ux/badge-no-inline-in-interactive -->
	<db-button>
		<db-badge placement="corner-top-right" label="Inline in button">Inline in button</db-badge>
	
  <db-tooltip>Describe action</db-tooltip></db-button>

	<!-- db-ux/close-button-text-required -->
	<db-notification closeable>Test</db-notification>
	<db-notification [closeable]="true">Test</db-notification>
	<db-notification [closeable]="false">Test</db-notification>
	<db-notification>Test</db-notification>
	<db-drawer></db-drawer>
	<db-custom-select [label]="'Select'"></db-custom-select>

	<!-- db-ux/button-no-text-requires-tooltip -->
	<db-button type="submit" noText icon="search">Test
  <db-tooltip>Describe action</db-tooltip></db-button>

	<!-- db-ux/button-type-required -->
	<db-button>Missing type
  <db-tooltip>Describe action</db-tooltip></db-button>
	<db-button type="button">Valid button
  <db-tooltip>Describe action</db-tooltip></db-button>

	<!-- db-ux/form-label-required -->
	<db-input></db-input>

	<!-- db-ux/form-validation-message-required -->
	<db-input [label]="'Email'" required></db-input>

	<!-- db-ux/header-burger-menu-label-required -->
	<db-header></db-header>

	<!-- db-ux/input-type-required -->
	<db-input [label]="'Test'"></db-input>

	<!-- db-ux/link-external-security -->
	<db-link href="https://example.com" target="_blank" content="external" referrerPolicy="no-referrer">External link</db-link>

	<!-- db-ux/navigation-item-back-button-text-required -->
	<db-navigation-item>
		<div slot="subNavigation">Sub nav</div>
	</db-navigation-item>

	<!-- db-ux/no-interactive-tooltip-content -->
	<db-tooltip>
		<db-button type="button">Click
  <db-tooltip>Describe action</db-tooltip></db-button>
	</db-tooltip>

	<!-- db-ux/no-nested-accordion -->
	<db-accordion>
		<db-accordion-item headlinePlain="Test">
			<db-accordion></db-accordion>
		</db-accordion-item>
	</db-accordion>

	<!-- db-ux/prefer-icon-attribute -->
	<db-button type="submit">
		<db-icon icon="search"></db-icon>
	
  <db-tooltip>Describe action</db-tooltip></db-button>

	<!-- db-ux/select-requires-options -->
	<db-select [label]="'Select'"></db-select>

	<!-- db-ux/tag-removable-remove-button-required -->
	<db-tag behavior="removable"></db-tag>

	<!-- db-ux/tooltip-requires-interactive-parent -->
	<div>
		<db-tooltip>Tooltip without interactive parent</db-tooltip>
	</div>
</div>
"
`;

exports[`Framework ESLint Integration > should lint React test file > react-errors 1`] = `
[
  {
    "column": 4,
    "endColumn": 21,
    "endLine": 23,
    "line": 23,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 14,
    "endLine": 29,
    "line": 29,
    "message": "DBButton with noText must have an icon prop",
    "messageId": "missingIcon",
    "ruleId": "db-ux/button-no-text-requires-tooltip",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 14,
    "endLine": 47,
    "line": 47,
    "message": "DBButton with noText must have an icon prop",
    "messageId": "missingIcon",
    "ruleId": "db-ux/button-no-text-requires-tooltip",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 28,
    "endLine": 49,
    "line": 49,
    "message": "DBButton with noText must have an icon prop",
    "messageId": "missingIcon",
    "ruleId": "db-ux/button-no-text-requires-tooltip",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 15,
    "endLine": 74,
    "line": 74,
    "message": "DBTooltip must not contain interactive elements. Use DBPopover for interactive content",
    "messageId": "noInteractive",
    "ruleId": "db-ux/no-interactive-tooltip-content",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 15,
    "endLine": 74,
    "line": 74,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 15,
    "endLine": 75,
    "line": 75,
    "message": "DBButton with noText must have an icon prop",
    "messageId": "missingIcon",
    "ruleId": "db-ux/button-no-text-requires-tooltip",
    "severity": 2,
  },
  {
    "column": 6,
    "endColumn": 19,
    "endLine": 82,
    "line": 82,
    "message": "DBAccordion must not be nested inside another DBAccordion as it confuses users",
    "messageId": "noNested",
    "ruleId": "db-ux/no-nested-accordion",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 16,
    "endLine": 100,
    "line": 100,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
]
`;

exports[`Framework ESLint Integration > should lint React test file > react-fixed 1`] = `
"import {
	DBAccordion,
	DBAccordionItem,
	DBBadge,
	DBButton,
	DBCustomSelect,
	DBDrawer,
	DBHeader,
	DBIcon,
	DBInput,
	DBLink,
	DBNavigationItem,
	DBNotification,
	DBSelect,
	DBTag,
	DBTooltip
} from '@db-ux/react-core-components';

export const TestComponent = () => {
	return (
		<div>
			{/* db-ux/accordion-item-headline-required */}
			<DBAccordionItem></DBAccordionItem>

			{/* db-ux/badge-corner-placement-rules */}
			<DBBadge placement="corner-top-right" label="9999">999</DBBadge>

			{/* db-ux/badge-no-inline-in-interactive */}
			<DBButton>
				<DBBadge placement="corner-top-right" label="Inline in button">Inl</DBBadge>
			
  <DBTooltip>Describe action</DBTooltip></DBButton>

			{/* db-ux/close-button-text-required */}
			<DBNotification closeable>Test</DBNotification>
			<DBNotification closeable={true}>Test</DBNotification>
			<DBNotification closeable={false}>Test</DBNotification>
			<DBNotification>Test</DBNotification>
			<DBDrawer></DBDrawer>
			<DBCustomSelect label="Select"></DBCustomSelect>

			{/* db-ux/button-no-text-requires-tooltip */}
			<DBButton type="submit" noText icon="search">
  <DBTooltip>Describe action</DBTooltip></DBButton>

			{/* db-ux/button-type-required */}
			<DBButton>Missing type
  <DBTooltip>Describe action</DBTooltip></DBButton>
			<DBButton type="button">Valid button
  <DBTooltip>Describe action</DBTooltip></DBButton>

			{/* db-ux/form-label-required */}
			<DBInput />

			{/* db-ux/form-validation-message-required */}
			<DBInput label="Email" required />

			{/* db-ux/header-burger-menu-label-required */}
			<DBHeader></DBHeader>

			{/* db-ux/input-type-required */}
			<DBInput label="Test" />

			{/* db-ux/link-external-security */}
			<DBLink href="https://example.com" target="_blank" content="external" referrerPolicy="no-referrer">
				External link
			</DBLink>

			{/* db-ux/navigation-item-back-button-text-required */}
			<DBNavigationItem
				subNavigation={<div>Sub nav</div>}></DBNavigationItem>

			{/* db-ux/no-interactive-tooltip-content */}
			<DBTooltip>
				<DBButton>Click
  <DBTooltip>Describe action</DBTooltip></DBButton>
			</DBTooltip>

			{/* db-ux/no-nested-accordion */}
			<DBAccordion>
				<DBAccordionItem headlinePlain="Test">
					<DBAccordion></DBAccordion>
				</DBAccordionItem>
			</DBAccordion>

			{/* db-ux/prefer-icon-attribute */}
			<DBButton type="submit" icon="search">
				
			
  <DBTooltip>Describe action</DBTooltip></DBButton>

			{/* db-ux/select-requires-options */}
			<DBSelect label="Select"></DBSelect>

			{/* db-ux/tag-removable-remove-button-required */}
			<DBTag behavior="removable"></DBTag>

			{/* db-ux/tooltip-requires-interactive-parent */}
			<div>
				<DBTooltip>Tooltip without interactive parent</DBTooltip>
			</div>
		</div>
	);
};
"
`;

exports[`Framework ESLint Integration > should lint Vue test file > vue-errors 1`] = `
[
  {
    "column": 3,
    "endColumn": 38,
    "endLine": 4,
    "line": 4,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 55,
    "endLine": 7,
    "line": 7,
    "message": "DBBadge with corner placement must have max 3 characters in text/children",
    "messageId": "textTooLong",
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 55,
    "endLine": 7,
    "line": 7,
    "message": "DBBadge with corner placement must have a label attribute for accessibility",
    "messageId": "missingLabel",
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 14,
    "endLine": 13,
    "line": 10,
    "message": "DBButton with noText must have an icon prop",
    "messageId": "missingIcon",
    "ruleId": "db-ux/button-no-text-requires-tooltip",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 64,
    "endLine": 29,
    "line": 28,
    "message": "DBButton with noText must have an icon prop",
    "messageId": "missingIcon",
    "ruleId": "db-ux/button-no-text-requires-tooltip",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 64,
    "endLine": 31,
    "line": 30,
    "message": "DBButton with noText must have an icon prop",
    "messageId": "missingIcon",
    "ruleId": "db-ux/button-no-text-requires-tooltip",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 4,
    "endLine": 48,
    "fix": {
      "range": [
        1702,
        1702,
      ],
      "text": " referrerPolicy="no-referrer"",
    },
    "line": 46,
    "message": "DBLink with content="external" should have referrerPolicy attribute",
    "messageId": "missingReferrerPolicy",
    "ruleId": "db-ux/link-external-security",
    "severity": 1,
  },
  {
    "column": 3,
    "endColumn": 15,
    "endLine": 59,
    "line": 56,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 57,
    "endLine": 58,
    "line": 57,
    "message": "DBButton with noText must have an icon prop",
    "messageId": "missingIcon",
    "ruleId": "db-ux/button-no-text-requires-tooltip",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 22,
    "endLine": 65,
    "line": 63,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 32,
    "endLine": 64,
    "line": 64,
    "message": "DBAccordion must not be nested inside another DBAccordion as it confuses users",
    "messageId": "noNested",
    "ruleId": "db-ux/no-nested-accordion",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 61,
    "endLine": 82,
    "line": 82,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
]
`;

exports[`Framework ESLint Integration > should lint Vue test file > vue-fixed 1`] = `
"<template>
	<div>
		<!-- db-ux/accordion-item-headline-required -->
		<DBAccordionItem></DBAccordionItem>

		<!-- db-ux/badge-corner-placement-rules -->
		<DBBadge placement="corner-top-right">9999</DBBadge>

		<!-- db-ux/badge-no-inline-in-interactive -->
		<DBButton>
  <DBTooltip>Describe action</DBTooltip>
			<DBBadge>Inline in button</DBBadge>
		</DBButton>

		<!-- db-ux/close-button-text-required -->
		<DBNotification closeable>Test</DBNotification>
		<DBNotification :closeable="true">Test</DBNotification>
		<DBNotification :closeable="false">Test</DBNotification>
		<DBNotification>Test</DBNotification>
		<DBDrawer></DBDrawer>
		<DBCustomSelect label="Select"></DBCustomSelect>

		<!-- db-ux/button-no-text-requires-tooltip -->
		<DBButton type="submit" noText icon="search">
  <DBTooltip>Describe action</DBTooltip></DBButton>

		<!-- db-ux/button-type-required -->
		<DBButton>
  <DBTooltip>Describe action</DBTooltip>Missing type</DBButton>
		<DBButton type="button">
  <DBTooltip>Describe action</DBTooltip>Valid button</DBButton>

		<!-- db-ux/form-label-required -->
		<DBInput />

		<!-- db-ux/form-validation-message-required -->
		<DBInput label="Email" required />

		<!-- db-ux/header-burger-menu-label-required -->
		<DBHeader></DBHeader>

		<!-- db-ux/input-type-required -->
		<DBInput label="Test" />

		<!-- db-ux/link-external-security -->
		<DBLink href="https://example.com" target="_blank" content="external" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer"
			>External link</DBLink
		>

		<!-- db-ux/navigation-item-back-button-text-required -->
		<DBNavigationItem>
			<template #subNavigation>Sub nav</template>
		</DBNavigationItem>

		<!-- db-ux/no-interactive-tooltip-content -->
		<DBTooltip>
			<DBButton type="submit">
  <DBTooltip>Describe action</DBTooltip>Click</DBButton>
		</DBTooltip>

		<!-- db-ux/no-nested-accordion -->
		<DBAccordion>
			<DBAccordionItem headlinePlain="Test">
				<DBAccordion></DBAccordion>
			</DBAccordionItem>
		</DBAccordion>

		<!-- db-ux/prefer-icon-attribute -->
		<DBButton type="submit" icon="search">
  <DBTooltip>Describe action</DBTooltip>
			
		</DBButton>

		<!-- db-ux/select-requires-options -->
		<DBSelect label="Select"></DBSelect>

		<!-- db-ux/tag-removable-remove-button-required -->
		<DBTag behavior="removable"></DBTag>

		<!-- db-ux/tooltip-requires-interactive-parent -->
		<div>
			<DBTooltip>Tooltip without interactive parent</DBTooltip>
		</div>
	</div>
</template>

<script setup lang="ts">
import {
	DBAccordion,
	DBAccordionItem,
	DBBadge,
	DBButton,
	DBCustomSelect,
	DBDrawer,
	DBHeader,
	DBIcon,
	DBInput,
	DBLink,
	DBNavigationItem,
	DBNotification,
	DBSelect,
	DBTag,
	DBTooltip
} from "@db-ux/v-core-components";
</script>
"
`;
